objects/Lead_Expiration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to set the expiration of Leads due to no activity.</description>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M__c</fullName>
        <label>M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P__c</fullName>
        <label>P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Expiration</label>
</CustomObject>